hot fix form result

--- a/pages/mi-importancia.html
+++ b/pages/mi-importancia.html
@@ -74,7 +74,7 @@
 
 
     <!-- ----------- Encuesta -------- -->
-    <section class="potasio-test">
+    <section class="potasio-test evaluacion-potasio">
       <h2>¿Tu y el potasio son buenos amigos?</h2>
       <p>Responde estas preguntas para descubrirlo y aprende cómo mejorar.</p><br>
 
