--- a/pages/que-soy.html
+++ b/pages/que-soy.html
@@ -171,6 +171,16 @@
       <div id="footer-info">
         <p>&copy; 2025 K<sup style="font-size: 0.5em">19</sup> Potasio. Proyecto realizado en Factoría F5.</p>
       </div>
+      
+
+      <div class="volver-tabla-container">
+      <a href="https://celiami.github.io/periodic-table-project/#table-section" class="back-to-table"
+        title="Regresa a la tabla periódica">
+        <i class="fa fa-arrow-left"></i>
+      </a>
+    </div>
+
+    
     </footer>
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <!--Selecciona la pestaña activa del menú de navegación para ponerle la clase .active / Con JQuery-->
