--- a/pages/curiosidades.html
+++ b/pages/curiosidades.html
@@ -107,6 +107,12 @@
                 <li><a href="../pages/actualidad.html">Actualidad<i id="arrow-right-footer"></i></a></li>
             </ul>
         </div>
+        <div class="volver-tabla-container">
+            <a href="https://celiami.github.io/periodic-table-project/#table-section" class="back-to-table"
+             title="Regresa a la tabla periódica">
+            <i class="fa fa-arrow-left"></i>
+            </a>
+        </div>
         <div id="footer-info">
             <p>&copy; 2025 K<sup style="font-size: 0.5em">19</sup> Potasio. Proyecto realizado en Factoría F5.</p>
         </div>
