update with new arrow

--- a/pages/donde-estoy.html
+++ b/pages/donde-estoy.html
@@ -49,7 +49,9 @@
         <div id="carousel-container">
             <h2>Dónde estoy</h2>
             <div id="divIntro">
-                <p id="pIntro"><span style="font-size: 1.5em;">¡Hola!   </span> Soy el <span style="font-weight: bold; font-size: 1.3em;">potasio</span>, un mineral esencial que ayuda a que tus músculos, nervios y
+                <p id="pIntro"><span style="font-size: 1.5em;">¡Hola! </span> Soy el <span
+                        style="font-weight: bold; font-size: 1.3em;">potasio</span>, un mineral esencial que ayuda a que
+                    tus músculos, nervios y
                     corazón
                     funcionen bien. Me puedes encontrar en frutas deliciosas como el plátano, la naranja, el aguacate y
                     las
@@ -151,6 +153,12 @@
                 <li><a href="../pages/mi-importancia.html">Mi importancia<i id="arrow-right-footer"></i></a></li>
             </ul>
         </div>
+        <div class="volver-tabla-container">
+            <a href="https://celiami.github.io/periodic-table-project/#table-section" class="back-to-table"
+                title="Regresa a la tabla periódica">
+                <i class="fa fa-arrow-left"></i>
+            </a>
+        </div>
         <div id="footer-info">
             <p>&copy; 2025 K<sup style="font-size: 0.5em">19</sup> Potasio. Proyecto realizado en Factoría F5.</p>
         </div>
@@ -158,7 +166,7 @@
     <script src="../src/js/script.js"></script>
     <script src="../src/js/donde-estoy.js"></script>
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-     <!--Selecciona la pestaña activa del menú de navegación para ponerle la clase .active / Con JQuery-->
+    <!--Selecciona la pestaña activa del menú de navegación para ponerle la clase .active / Con JQuery-->
     <script>
         $(function () {
             $('a').each(function () {
