flecha de tabla periodica lista

--- a/pages/actualidad.html
+++ b/pages/actualidad.html
@@ -117,6 +117,12 @@
     </div>
     </div>
     </div>
+    <div class="volver-tabla-container">
+      <a href="https://celiami.github.io/periodic-table-project/#table-section" class="back-to-table"
+        title="Regresa a la tabla periódica">
+        <i class="fa fa-arrow-left"></i>
+      </a>
+    </div>
   </main>
   <footer>
     <div id="footer-nav">
