--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>K19</title>
   <link href="https://fonts.googleapis.com/css2?family=Kodchasan&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/src/css/style-index.css" />
+  <link rel="stylesheet" href="./src/css/style-index.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"> <!-- AGREGADO -->
 </head>
 
@@ -13,7 +13,7 @@
   <!-- Letrero de error emergente -->
  <div id="mensaje-error" class="error" style="display: none;">
   <span>❌ VUELVE A INTENTARLO</span>
-  <img src="/public/error.PNG" alt="Icono error" />
+  <img src="./public/error.PNG" alt="Icono error" />
  
 </div>
 
@@ -21,7 +21,7 @@
   <div class="contenedor">
     <!-- Imagen de la pregunta -->
     <div class="lado-izquierdo">
-      <img src="/public/img-q1.PNG" alt="Símbolo K" class="imagen-k">
+      <img src="./public/img-q1.PNG" alt="Símbolo K" class="imagen-k">
     </div>
 
     <!-- Opciones de respuesta -->
