update link for prod

--- a/pages/que-soy.html
+++ b/pages/que-soy.html
@@ -11,7 +11,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="../src/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/src/css/que-soy.css">
+  <link rel="stylesheet" href="../src/css/que-soy.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
@@ -20,30 +20,30 @@
 
   <header>
     <div id="logo-container">
-      <a href="../index.html"><i id="arrow-left-header"></i>
+      <a href="/potasio-element"><i id="arrow-left-header"></i>
         <h1 id="pageTitle"><span id="atomic-numer">k<sup style="font-size: 0.6em"> 19</sup></span> POTASIO</h1>
       </a>
     </div>
     <nav class="topnav" id="myTopnav">
       <ul>
-        <li id="que-soy-li-link"><a href="../pages/que-soy.html">Qué soy</a></li>
-        <li id="donde-estoy-li-link"><a href="../pages/donde-estoy.html">Dónde estoy</a></li>
-        <li id="mi-importancia-li-link"><a href="../pages/mi-importancia.html">Mi importancia</a></li>
-        <li id="curiosidades-li-link"><a href="../pages/curiosidades.html">Curiosidades</a></li>
-        <li id="actualidad-li-link"><a href="../pages/actualidad.html">Actualidad</a></li>
-        <li id="creadoras-li-link"><a href="../pages/creadoras.html">Creadoras</a></li>
+        <li id="que-soy-li-link"><a href="/potasio-element/pages/que-soy.html">Qué soy</a></li>
+        <li id="donde-estoy-li-link"><a href="/potasio-element/pages/donde-estoy.html">Dónde estoy</a></li>
+        <li id="mi-importancia-li-link"><a href="/potasio-element/pages/mi-importancia.html">Mi importancia</a></li>
+        <li id="curiosidades-li-link"><a href="/potasio-element/pages/curiosidades.html">Curiosidades</a></li>
+        <li id="actualidad-li-link"><a href="/potasio-element/pages/actualidad.html">Actualidad</a></li>
+        <li id="creadoras-li-link"><a href="/potasio-element/pages/creadoras.html">Creadoras</a></li>
         <li id="fa-bars-menu"><a href="javascript:void(0);" class="icon" onclick="responsiveNav()">
             <i class="fa fa-bars" id="openMenu"></i>
           </a></li>
       </ul>
     </nav>
   </header>
-  <script src="/src/js/script.js"></script>
+  <script src="../src/js/script.js"></script>
 
 
   <div class="letrero">
     <div class="contenido">
-      <img src="/public/correcto.PNG" alt="Imagen de Mendeleyev">
+      <img src="../public/correcto.PNG" alt="Imagen de Mendeleyev">
       <span class="animate__animated animate__bounceInDown">🎉¡Así es! Soy el potasio!</span>
     </div>
   </div>
@@ -60,7 +60,7 @@
       </p>
     </div>
 
-    <img src="/public/Potasiomol.gif" class="imagen" alt="Potasiomol">
+    <img src="../public/Potasiomol.gif" class="imagen" alt="Potasiomol">
 
   </div>
 
@@ -112,7 +112,7 @@
   <div class="card visible" id="card1">
     <div class="card-inner">
       <div class="face front">
-        <img src="/public/potacio-explo copy.PNG" alt="Imagen Tarjeta 1" />
+        <img src="../public/potacio-explo copy.PNG" alt="Imagen Tarjeta 1" />
       </div>
       <div class="face back">
         <p>Este metal tiene una reacción muy energética cuando se encuentra en lugares con humedad o entra en contacto
@@ -127,7 +127,7 @@
     <div class="card" id="card2">
       <div class="card-inner">
         <div class="face front">
-          <img src="/public/Potassiumballs.PNG" alt="Imagen Tarjeta 2" />
+          <img src="../public/Potassiumballs.PNG" alt="Imagen Tarjeta 2" />
         </div>
         <div class="face back">
           <p>El potasio posee un brillo plateado distintivo y es extremadamente blando, lo que permite cortarlo con
@@ -142,7 +142,7 @@
       <div class="card" id="card3">
         <div class="card-inner">
           <div class="face front">
-            <img src="/public/avohero.PNG" alt="Imagen Tarjeta 3" />
+            <img src="../public/avohero.PNG" alt="Imagen Tarjeta 3" />
           </div>
           <div class="face back">
             <p>El potasio es un micronutriente esencial para la vida. En el cuerpo humano representa aproximadamente el
@@ -155,7 +155,7 @@
     <button id="siguiente" class="boton-siguiente">✨Dame clic!✨ (pero primero da clic a la tarjeta)</button>
 
 
-    <script src="/src/js/que-soy.js"></script>
+    <script src="../src/js/que-soy.js"></script>
 
     <script>
       console.log("¡Bienvenido al mundo del potasio!");
@@ -164,8 +164,8 @@
     <footer>
       <div id="footer-nav">
         <ul>
-          <li><a href="../index.html"><i id="arrow-left-footer"></i>Inicio</a></li>
-          <li><a href="../pages/donde-estoy.html">Dónde estoy<i id="arrow-right-footer"></i></a></li>
+          <li><a href="/potasio-element"><i id="arrow-left-footer"></i>Inicio</a></li>
+          <li><a href="/potasio-element/pages/donde-estoy.html">Dónde estoy<i id="arrow-right-footer"></i></a></li>
         </ul>
       </div>
 
