hot fix game buttom

--- a/pages/juego-actualidad.html
+++ b/pages/juego-actualidad.html
@@ -5,6 +5,7 @@
   <title>Potasio Reactor</title>
   <!-- Enlace al archivo de estilos CSS -->
   <link rel="stylesheet" href="../src/css/juego-actualidad.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -51,7 +52,12 @@
 <div id="reaction-modal">
   <div class="modal-content" id="modal-text"></div>
 </div>
-
+<div class="volver-tabla-container">
+      <a href="../pages/actualidad.html" class="back-to-table"
+        title="Regresa a la pagina actualidad">
+        <i class="fa fa-arrow-left"></i>
+      </a>
+    </div>
 <script src="../src/js/juegos-actualidad.js"></script>
 </body>
 </html>
